feat: 🎸 Action card clear queue

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,8 @@
 {
   "volumioPlayerError": "Volumio player returns error",
   "volumioDeviceUnavailable": "Volumio player does not respond",
+  "volumioAudioPlayerNotFound": "Volumio audio player not found",
   "volumioNoPlaylistsOnDevice": "No playlists found on device",
-  "volumioNoPlaylistsOnDeviceMatchingWildcard": "No playlists found on device for wildcard"
+  "playlists": "playlists",
+  "tracks": "tracks"
 }
