feat: 🎸 Flowcard: Speel alle favorieten af

--- a/locales/en.json
+++ b/locales/en.json
@@ -4,5 +4,8 @@
   "volumioAudioPlayerNotFound": "Volumio audio player not found",
   "volumioNoPlaylistsOnDevice": "No playlists found on device",
   "playlists": "playlists",
-  "tracks": "tracks"
+  "tracks": "tracks",
+  "artists": "artists",
+  "albums": "albums",
+  "favourites":"favourites"
 }
