--- a/locales/nl.json
+++ b/locales/nl.json
@@ -5,5 +5,8 @@
   "volumioAudioPlayerNotFound": "Volumio speler niet gevonden",
   "volumioNoPlaylistsOnDeviceMatchingWildcard": "Op de Volumio speler zijn geen afspeellijsten gevonden voor de zoekterm",
   "playlists": "afspeellijsten",
-  "tracks": "tracks"
+  "tracks": "tracks",
+  "artists": "artiesten",
+  "albums": "albums",
+  "favourites": "favorieten"
 }
